--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.scss
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.scss
@@ -1,21 +1,34 @@
-.landslides-liquefaction-icon {
+.ground-failure-icon {
   float: left;
-  font-size: 40px;
+  height: 40px;
   margin-right: 20px;
+  width: 40px;
 }
 
 .green {
-  color: #27a83c;
+  fill: #27a83c;
+  .st1 {
+    stroke: #27a83c;
+  }
 }
 
 .yellow {
-  color: #e5e514;
+  fill: #e5e514;
+  .st1 {
+    stroke: #e5e514;
+  }
 }
 
 .orange {
-  color: #f0a216;
+  fill: #f0a216;
+  .st1 {
+    stroke: #f0a216;
+  }
 }
 
 .red {
-  color: #ba2d1a;
+  fill: #ba2d1a;
+  .st1 {
+    stroke: #ba2d1a;
+  }
 }
