--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -99,7 +99,7 @@
           <path d="M4.4,3.1c0,0,5.7-1.4,5.7-1.4l4.3,4.4c0.3,0.3,0,0.5-0.2,0.5L4.4,3.6C4.1,3.5,4.1,3.1,4.4,3.1z"/>
           <rect x="11.8" y="3" transform="matrix(0.9617 0.2742 -0.2742 0.9617 1.4948 -3.2069)" width="0.8" height="1.5"/>
         </g>
-        <title>Artboard 1</title>
+        <title>Liquefaction</title>
         <path class="st1" d="M0.1,11c0.7-0.2,1.4-0.3,2.2-0.3c0.8,0,1.5,0.1,2.3,0.3c0.7,0.2,1.4,0.3,2.2,0.3c0.7,0,1.5-0.1,2.2-0.3
           c0.7-0.2,1.5-0.3,2.2-0.3c0.8,0,1.5,0.1,2.3,0.3c0.7,0.2,1.4,0.3,2.2,0.3c0.7,0,1.5-0.1,2.2-0.3"/>
         <line class="st1" x1="12.7" y1="9.2" x2="17.8" y2="9.2"/>
