Add tooltips to pga/pgv

--- a/src/app/shakemap/pgv/pgv.component.html
+++ b/src/app/shakemap/pgv/pgv.component.html
@@ -11,7 +11,8 @@
 
     <shared-map
         [overlays]="shakemap | shakemapOverlays:'shakemap-pgv'"
-        [showScaleControl]="true">
+        [showScaleControl]="true"
+        [showAttributionControl]="false">
     </shared-map>
   </a>
 
