--- a/src/app/shakemap/psa/psa.component.html
+++ b/src/app/shakemap/psa/psa.component.html
@@ -15,7 +15,8 @@
 
       <shared-map
           [overlays]="shakemap | shakemapOverlays:'shakemap-psa03'"
-          [showScaleControl]="true">
+          [showScaleControl]="true"
+          [showAttributionControl]="false">
       </shared-map>
     </a>
   </ng-container>
@@ -40,7 +41,8 @@
 
       <shared-map
           [overlays]="shakemap | shakemapOverlays:'shakemap-psa10'"
-          [showScaleControl]="true">
+          [showScaleControl]="true"
+          [showAttributionControl]="false">
       </shared-map>
     </a>
   </ng-container>
@@ -65,7 +67,8 @@
 
       <shared-map
           [overlays]="shakemap | shakemapOverlays:'shakemap-psa30'"
-          [showScaleControl]="true">
+          [showScaleControl]="true"
+          [showAttributionControl]="false">
       </shared-map>
     </a>
   </ng-container>
