--- a/src/app/shakemap/intensity/intensity.component.html
+++ b/src/app/shakemap/intensity/intensity.component.html
@@ -10,7 +10,8 @@
         }">
       <shared-map
           [overlays]="shakemap | shakemapOverlays:'shakemap-intensity'"
-          [showScaleControl]="true">
+          [showScaleControl]="true"
+          [showAttributionControl]="false">
       </shared-map>
     </a>
 
