--- a/src/app/shakemap/pga/pga.component.html
+++ b/src/app/shakemap/pga/pga.component.html
@@ -11,7 +11,8 @@
 
     <shared-map
         [overlays]="shakemap | shakemapOverlays:'shakemap-pga'"
-        [showScaleControl]="true">
+        [showScaleControl]="true"
+        [showAttributionControl]="false">
     </shared-map>
   </a>
 
