--- a/src/app/focal-mechanism/attribution/attribution.component.html
+++ b/src/app/focal-mechanism/attribution/attribution.component.html
@@ -1,19 +1,19 @@
 <ng-container *ngIf="tensor">
   <dl class="description-table">
     <dt>Catalog</dt>
-    <dd>{{ tensor.product.properties.eventsource.toUpperCase() }}</dd>
+    <dd>{{ tensor.product?.properties?.eventsource.toUpperCase() }}</dd>
 
     <dt>Data Source</dt>
     <dd>
       <shared-product-attribution
-          [product]="{ source: tensor.product.properties['beachball-source'] || tensor.product.source }">
+          [product]="{ source: tensor.product?.properties['beachball-source'] || tensor.product?.source }">
       </shared-product-attribution>
     </dd>
 
     <dt>Contributor</dt>
     <dd>
       <shared-product-attribution
-          [product]="{ source: tensor.product.source }">
+          [product]="{ source: tensor.product?.source }">
       </shared-product-attribution>
     </dd>
   </dl>
