updated property access in various files

--- a/src/app/executive/shakemap-pin/shakemap-pin.component.html
+++ b/src/app/executive/shakemap-pin/shakemap-pin.component.html
@@ -3,7 +3,7 @@
     [product]="product"
     [title]="title">
 
-  <div card-content *ngIf="product?.properties.maxmmi as mmi">
+  <div card-content *ngIf="product?.properties?.maxmmi as mmi">
 
     <dl class="mmi-description">
       <dt>Estimated Intensity</dt>
