--- a/src/app/executive/origin-pin/origin-pin.component.html
+++ b/src/app/executive/origin-pin/origin-pin.component.html
@@ -2,25 +2,27 @@
     [link]="link"
     [product]="product"
     [title]="title">
-  <dl card-content *ngIf="product.properties as properties">
-    <dt>Review Status</dt>
-    <dd>{{ (properties['review-status'] || 'automatic') | uppercase }}</dd>
+  <dl card-content>
+    <ng-container *ngIf="product.properties as properties">
+      <dt>Review Status</dt>
+      <dd>{{ (properties['review-status'] || 'automatic') | uppercase }}</dd>
 
-    <dt>Magnitude</dt>
-    <dd>
-      {{ properties.magnitude | sharedNumber:1 }}
-      {{ properties['magnitude-type'] }}
-    </dd>
+      <dt>Magnitude</dt>
+      <dd>
+        {{ properties.magnitude | sharedNumber:1 }}
+        {{ properties['magnitude-type'] }}
+      </dd>
 
-    <dt>Depth</dt>
-    <dd>{{ properties.depth | sharedNumber:1:'km' }}</dd>
+      <dt>Depth</dt>
+      <dd>{{ properties.depth | sharedNumber:1:'km' }}</dd>
 
-    <dt>Time</dt>
-    <dd>
-      {{ properties.eventtime | date:"yyyy-MM-dd":"UTC" }}
-      <br/>
-      {{ properties.eventtime | date:"HH:mm:ss":"UTC" }}
-      UTC
-    </dd>
+      <dt>Time</dt>
+      <dd>
+        {{ properties.eventtime | date:"yyyy-MM-dd":"UTC" }}
+        <br/>
+        {{ properties.eventtime | date:"HH:mm:ss":"UTC" }}
+        UTC
+      </dd>
+    </ng-container>
   </dl>
 </basic-pin>
