--- a/src/app/moment-tensor/info/info.component.html
+++ b/src/app/moment-tensor/info/info.component.html
@@ -23,7 +23,7 @@
 
   <dl class="description-table">
     <dt>Moment</dt>
-    <dd>{{ tensor.moment.toExponential(3) }} {{ tensor.units }}</dd>
+    <dd>{{ tensor.moment?.toExponential(3) }} {{ tensor.units }}</dd>
 
     <dt>Magnitude</dt>
 
@@ -47,7 +47,7 @@
     <dd>{{ tensor.halfDuration | sharedNumber:2:'s' }}</dd>
 
     <dt>Catalog</dt>
-    <dd>{{ tensor.product?.properties?.eventsource.toUpperCase() }}</dd>
+    <dd>{{ tensor.product?.properties?.eventsource | uppercase }}</dd>
 
     <dt>Data Source</dt>
     <dd>
