--- a/src/app/executive/shakemap-pin/shakemap-pin.component.html
+++ b/src/app/executive/shakemap-pin/shakemap-pin.component.html
@@ -4,7 +4,7 @@
     [title]="title">
 
   <div card-content>
-    <ng-container *ngIf="product.properties?.maxmmi as mmi">
+    <ng-container *ngIf="product?.properties?.maxmmi as mmi">
       <dl class="mmi-description">
         <dt>Estimated Intensity</dt>
         <dd>
