--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -71,7 +71,7 @@
       </div>
 
       <div [ngSwitch]="product.properties['landslide-population-alert-color']">
-        <span *ngSwitchCase="'green'">No to few population</span>
+        <span *ngSwitchCase="'green'">Little to no population</span>
         <span *ngSwitchCase="'yellow'">Limited population</span>
         <span *ngSwitchCase="'orange'">Significant population</span>
         <span *ngSwitchCase="'red'">Extensive population</span>
