--- a/src/app/shared/css/station-overlay.scss
+++ b/src/app/shared/css/station-overlay.scss
@@ -126,3 +126,8 @@ dl.description-table.station-overlay {
     }
   }
 }
+
+.contour-overlay-label {
+  width: max-content;
+  height: max-content;
+}
