--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@
 
 @import './app/shared/css/mmi-colors.scss';
 @import './app/shared/css/station-overlay.scss';
+@import './app/shared/css/contour-overlay.scss';
 
 /* allow wrapping on small screens */
 .mat-radio-label-content {
