--- a/src/app/shakemap/pga/pga.component.html
+++ b/src/app/shakemap/pga/pga.component.html
@@ -6,11 +6,13 @@
         'shakemap-code': shakemap?.code,
         'shakemap-source': shakemap?.source,
         'shakemap-pga': true,
+        'shakemap-stations': true,
         'shakemap-intensity': false
       }">
 
     <shared-map
-        [overlays]="shakemap | shakemapOverlays:'shakemap-pga'"
+        [overlays]="shakemap | shakemapOverlays:['shakemap-pga', 'shakemap-stations']"
+        [baselayer]="'Grayscale'"
         [showScaleControl]="true"
         [showAttributionControl]="false">
     </shared-map>
@@ -18,9 +20,13 @@
 
   <ng-template #noOverlay>
     <img
-        *ngIf="shakemap?.contents['download/pga.jpg']"
+        *ngIf="shakemap?.contents['download/pga.jpg']; else noImage"
         src="{{ shakemap.contents['download/pga.jpg'].url }}"
         alt="ShakeMap peak ground acceleration image">
+
+    <ng-template #noImage>
+      <h1>No PGA available for this event</h1>
+    </ng-template>
   </ng-template>
 
 </ng-container>
