--- a/src/app/shakemap/pgv/pgv.component.html
+++ b/src/app/shakemap/pgv/pgv.component.html
@@ -6,11 +6,13 @@
         'shakemap-code': shakemap?.code,
         'shakemap-source': shakemap?.source,
         'shakemap-pgv': true,
+        'shakemap-stations': true,
         'shakemap-intensity': false
       }">
 
     <shared-map
-        [overlays]="shakemap | shakemapOverlays:'shakemap-pgv'"
+        [overlays]="shakemap | shakemapOverlays:['shakemap-pgv', 'shakemap-stations']"
+        [baselayer]="'Grayscale'"
         [showScaleControl]="true"
         [showAttributionControl]="false">
     </shared-map>
@@ -18,9 +20,13 @@
 
   <ng-template #noOverlay>
     <img
-        *ngIf="shakemap?.contents['download/pgv.jpg']"
+        *ngIf="shakemap?.contents['download/pgv.jpg']; else noImage"
         src="{{ shakemap.contents['download/pgv.jpg'].url }}"
         alt="ShakeMap peak ground velocity image">
+
+    <ng-template #noImage>
+      <h1>No PGV available for this event</h1>
+    </ng-template>
   </ng-template>
 
 </ng-container>
