--- a/src/app/oaf/forecast/forecast.component.html
+++ b/src/app/oaf/forecast/forecast.component.html
@@ -34,7 +34,8 @@
               </mat-header-cell>
               <mat-cell *matCellDef="let bin">
                 <ng-container *ngIf="bin.p95maximum !== 0 ; else asterisk">
-                  {{ bin.p95minimum }} to {{ bin.p95maximum }}
+                  {{ bin.p95minimum | roundDown: 2 }} to
+                      {{ bin.p95maximum | roundUp: 2 }}
                 </ng-container>
                 <ng-template #asterisk>
                   &#x2a;
