--- a/src/app/oaf/model/model.component.html
+++ b/src/app/oaf/model/model.component.html
@@ -1,3 +1,11 @@
-<p>
-  model works!
-</p>
+<ng-container *ngIf="oafService.model$ | async as model">
+  <h3><a href="{{ model.reference }}">{{ model.name }}</a></h3>
+
+  <h4>Parameters</h4>
+  <dl class="description-table">
+    <ng-container *ngFor="let key of model.parameters.keys">
+      <dt>{{ key }}</dt>
+      <dd>{{ model.parameters.values[key] }}</dd>
+    </ng-container>
+  </dl>
+</ng-container>
