Moved leaflet-control mixin to shared/leaflet-styles.scss

--- a/src/app/shared/css/leaflet-styles.scss
+++ b/src/app/shared/css/leaflet-styles.scss
@@ -1,3 +1,12 @@
+@mixin leaflet-control () {
+  background: #fff;
+  border: 2px solid rgba(0,0,0,0.2);
+  border-radius: 5px;
+  float: left;
+  margin: 10px;
+  padding: 0;
+}
+
 .leaflet-bottom.leaflet-right {
   width: 100%;
 }
