Make shared bubble css public

--- a/src/app/shared/bubble/bubble.component.html
+++ b/src/app/shared/bubble/bubble.component.html
@@ -1,4 +1,6 @@
-<span>
-  <ng-content></ng-content>
-</span>
-<abbr [title]="title">{{ name }}</abbr>
+<div class="shared-bubble">
+  <span>
+    <ng-content></ng-content>
+  </span>
+  <abbr [title]="title">{{ name }}</abbr>
+</div>
