--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import './app/shared/css/contour-overlay.scss';
 @import './app/shared/css/description-table.scss';
 @import './app/shared/css/mmi-colors.scss';
-@import './app/shared/css/shared-bubble.scss';
+@import './app/shared/css/shared-bubble.css';
 @import './app/shared/css/station-overlay.scss';
 
 /* Leaflet Styles */
