--- a/src/app/shared/css/mmi-styles.scss
+++ b/src/app/shared/css/mmi-styles.scss
@@ -86,3 +86,31 @@ $mmi-font-family: Tahoma, Verdana, Segoe, sans-serif;
   color: $mmiXII-text-color !important;
   background-color: $mmiXII !important;
 }
+
+.mmi {
+  display: inline-block;
+  text-align: center;
+
+  > span {
+    display: block;
+    max-width: 100%;
+    color: #000;
+
+  }
+
+  > abbr {
+    color: #666;
+    font-size: 0.8em;
+  }
+}
+
+.mmi {
+  border-radius: 2px;
+  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
+  padding: 0.5em;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+}
+
+.roman {
+  font-family: $mmi-font-family;
+}
