--- a/src/app/shared/css/shared-bubble.css
+++ b/src/app/shared/css/shared-bubble.css
@@ -1,7 +1,8 @@
 .shared-bubble {
-  display: block;
+  display: inline-block;
   line-height: 1;
   text-align: center;
+  padding: 0 1em;
 }
 
 .shared-bubble.border {
@@ -9,6 +10,10 @@
   box-shadow: inset 0 0 1px rgba(0,0,0,.5);
   padding: .5em 0;
   text-shadow: 1px 1px 0 hsla(0,0%,100%,.3);
+}
+
+.shared-bubble.mmi {
+  padding: .5em;
 }
 
 .shared-bubble span {
