--- a/src/app/shared/css/shared-bubble.css
+++ b/src/app/shared/css/shared-bubble.css
@@ -8,12 +8,11 @@
 .shared-bubble.border {
   border-radius: 2px;
   box-shadow: inset 0 0 1px rgba(0,0,0,.5);
-  padding: .5em 0;
   text-shadow: 1px 1px 0 hsla(0,0%,100%,.3);
 }
 
 .shared-bubble.mmi {
-  padding: .5em;
+  padding: .5em 1em;
 }
 
 .shared-bubble span {
