--- a/src/app/executive/oaf-pin/oaf-pin.component.html
+++ b/src/app/executive/oaf-pin/oaf-pin.component.html
@@ -1,4 +1,4 @@
-<basic-pin *ngIf="product" [link]="link" [product]="product" [title]="title">
+<basic-pin [link]="link" [product]="product" [title]="title">
   <div card-content>
     <p>
       Our model of the expected numbers and odds of future earthquakes.
