--- a/src/app/oaf/commentary/commentary.component.html
+++ b/src/app/oaf/commentary/commentary.component.html
@@ -1,14 +1,194 @@
 <ng-container *ngIf="eventService.product$ | async as product; else noProduct">
-  <h4>Product</h4>
-  <pre>
-    {{ product | json }}
-  </pre>
-
   <ng-container *ngIf="oafService.oaf$ | async as oaf">
-    <h4>Details</h4>
-    <pre>
-      {{ oaf | json }}
-    </pre>
+
+    <h3>Be ready for more earthquakes</h3>
+    <ul>
+      <li>
+        More earthquakes than usual (called aftershocks) will continue
+        to occur near the mainshock.
+      </li>
+      <li>
+        When there are more earthquakes, the chance of a large earthquake
+        is greater which means that the chance of damage is greater.
+      </li>
+      <li>
+        The USGS advises everyone to be aware of the possibility of
+        aftershocks, especially when in or around vulnerable structures
+        such as unreinforced masonry buildings.
+      </li>
+      <ng-container *ngIf="oaf.template === 'Mainshock'; else eqOfNote">
+        <li>
+          This earthquake could be part of a sequence. An earthquake
+          sequence may have larger and potentially damaging earthquakes
+          in the future, so remember to: Drop, Cover, and Hold on.
+        </li>
+      </ng-container>
+      <ng-template #eqOfNote>
+        <li>
+          In an earthquake, remember to: Drop, Cover, and Hold on.
+        </li>
+      </ng-template>
+
+    </ul>
+
+    <h3>What we think will happen next</h3>
+    <p>
+      According to our forecast, over the next {{ oaf.advisoryTimeFrame }} there is a
+
+      <ng-container *ngIf="forecast?.aboveMainshockMag; else probability">
+        <!-- TODO create pipe, 100 -> `&gt;99`; 0 -> `&lt;1` -->
+        {{ forecast.aboveMainshockMag.probability | sharedOafPercentage }}
+      </ng-container>
+      <ng-template #probability>
+        <!-- TODO create pipe, 100 -> `&gt;99`; 0 -> `&lt;1` -->
+        {{ forecast.bins['magnitude-5'].probability | sharedOafPercentage }}
+      </ng-template>
+
+      chance of one or more aftershocks that are larger than magnitude
+
+      <ng-container
+          *ngIf="forecast?.aboveMainshockMag?.magnitude; else magnitude">
+        {{ forecast.aboveMainshockMag.magnitude }}.
+      </ng-container>
+      <ng-template #magnitude>
+        5.
+      </ng-template>
+
+       It is likely that there will be smaller earthquakes over the next
+       {{ oaf.advisoryTimeFrame }}, with
+
+      <ng-container 
+          *ngIf="forecast?.bins['magnitude-3']?.p95maximum > 0; else noRange">
+        {{ forecast.bins['magnitude-3'].p95minimum }} to
+        {{ forecast.bins['magnitude-3'].p95maximum }}
+      </ng-container>
+      <ng-template #noRange>
+        the possibility of
+      </ng-template>
+
+        magnitude 3 or higher aftershocks. Magnitude 3
+        and above are large enough to be felt near the epicenter. The
+        number of aftershocks will drop off over time, but a large
+        aftershock can increase the numbers again, temporarily.
+    </p>
+
+    <p *ngIf="oaf.template === 'Mainshock'">
+      More details about the earthquake forecast is provided in the section
+      &ldquo;Our detailed aftershock forecast&rdquo; below.
+    </p>
+
+    <h3>About this earthquake and related aftershocks</h3>
+    <p>
+      {{ oaf.injectableText }}
+    </p>
+    <p>
+      So far in this sequence there have been
+      {{ transformObservations(3, oaf.observations) }}
+      magnitude 3 or higher earthquakes, which are strong enough to be felt,
+      and {{ transformObservations(5, oaf.observations) }}
+      magnitude 5 or higher earthquakes, which are large enough to do damage.
+    </p>
+
+    <ng-container *ngIf="oaf.template === 'Mainshock'">
+      <h3>Our detailed aftershock forecast</h3>
+      <p>
+        The USGS estimates the chance of more aftershocks as follows: Within
+        the next {{ oaf.advisoryTimeFrame }} until
+        {{ forecast.timeEnd | date:"yyyy-MM-dd" }}:
+      </p>
+      <ul>
+        <li *ngIf="forecast.bins['magnitude-3'] as bin">
+          The chance of an earthquake of magnitude {{ bin.magnitude }}
+          or higher is
+          <ng-container *ngIf="bin.probability <= 0.01; else mag3Prob">
+            1 in {{ 1 / bin.probability | sharedSignificantFigure:1 }},
+            such earthquakes may occur in the case that the sequence is
+            re-invigorated by a larger aftershock.
+          </ng-container>
+          <ng-template #mag3Prob>
+            {{ bin.probability | sharedOafPercentage }},
+            and it is most likely that as few as
+            {{ bin.p95minimum | sharedSignificantFigure:2 }} or as many as
+            {{ bin.p95maximum | sharedSignificantFigure:2 }} such
+            earthquakes may occur in the case that the sequence is
+            re-invigorated by a larger aftershock.
+          </ng-template>
+        </li>
+        <li *ngIf="forecast.bins['magnitude-5'] as bin">
+          The chance of an earthquake of magnitude {{ bin.magnitude }}
+          or higher is
+          <ng-container *ngIf="bin.probability <= 0.01; else mag3Prob">
+            1 in {{ 1 / bin.probability | sharedSignificantFigure:1 }},
+            such earthquakes may occur in the case that the sequence is
+            re-invigorated by a larger aftershock.
+          </ng-container>
+          <ng-template #mag3Prob>
+            {{ bin.probability | sharedOafPercentage }}, and it is most likely
+            that as few as {{ bin.p95minimum | sharedSignificantFigure:2 }}
+            or as many as {{ bin.p95maximum | sharedSignificantFigure:2 }}
+            such earthquakes may occur.
+          </ng-template>
+        </li>
+        <li *ngIf="forecast.bins['magnitude-6'] as bin">
+          The chance of an earthquake of magnitude {{ bin.magnitude }}
+          or higher is
+          <ng-container *ngIf="bin.probability <= 0.01; else mag3Prob">
+            1 in {{ 1 / bin.probability | sharedSignificantFigure:1 }},
+            such earthquakes may occur in the case that the sequence is
+            re-invigorated by a larger aftershock.
+          </ng-container>
+          <ng-template #mag3Prob>
+            {{ bin.probability | sharedOafPercentage }}, and it is most likely
+            that as few as {{ bin.p95minimum | sharedSignificantFigure:2 }}
+            or as many as {{ bin.p95maximum | sharedSignificantFigure:2 }}
+            such earthquakes may occur.
+          </ng-template>
+        </li>
+        <li *ngIf="forecast.bins['magnitude-7'] as bin">
+          The chance of an earthquake of magnitude {{ bin.magnitude }}
+          or higher is
+          <ng-container *ngIf="bin.probability <= 0.01; else mag3Prob">
+            1 in {{ 1 / bin.probability | sharedSignificantFigure:1 }},
+            such earthquakes may occur in the case that the sequence is
+            re-invigorated by a larger aftershock.
+          </ng-container>
+          <ng-template #mag3Prob>
+            {{ bin.probability | sharedOafPercentage }}, and it is most likely
+            that as few as {{ bin.p95minimum | sharedSignificantFigure:2 }}
+            or as many as {{ bin.p95maximum | sharedSignificantFigure:2 }}
+            such earthquakes may occur.
+          </ng-template>
+        </li>
+      </ul>
+    </ng-container>
+
+
+    <h3>About our earthquake forecasts</h3>
+    <p>
+      No one can predict the exact time or place of any earthquake,
+      including aftershocks. Our earthquake forecasts give us an
+      understanding of the chances of having more earthquakes within a
+      given time period in the affected area. We calculate this
+      earthquake forecast using a statistical analysis based on
+      past earthquakes.
+    </p>
+    <p>
+      Our forecast changes as time passes due to decline in the frequency
+      of aftershocks, larger aftershocks that may trigger further
+      earthquakes, and changes in forecast modeling based on the data
+      collected for this earthquake sequence.
+    </p>
+
+    <p class="footnote">
+      This forecast was issued: {{ oaf.creationTime | sharedDateTime }}
+    </p>
+
+    <p class="footnote">
+      This forecast will not be updated unless the forecast changes
+      significantly due to a new earthquake or new data analysis
+      on this earthquake.
+    </p>
+
   </ng-container>
 </ng-container>
 
