--- a/src/app/oaf/commentary/commentary.component.html
+++ b/src/app/oaf/commentary/commentary.component.html
@@ -33,15 +33,14 @@
 
     <h3>What we think will happen next</h3>
     <p>
-      According to our forecast, over the next {{ oaf.advisoryTimeFrame }} there is a
+      According to our forecast, over the next {{ oaf.advisoryTimeFrame }}
+      there is a
 
       <ng-container *ngIf="forecast?.aboveMainshockMag; else probability">
-        <!-- TODO create pipe, 100 -> `&gt;99`; 0 -> `&lt;1` -->
-        {{ forecast.aboveMainshockMag.probability | sharedOafPercentage }}
+        {{ forecast.aboveMainshockMag.probability | oafPercent }}
       </ng-container>
       <ng-template #probability>
-        <!-- TODO create pipe, 100 -> `&gt;99`; 0 -> `&lt;1` -->
-        {{ forecast.bins['magnitude-5'].probability | sharedOafPercentage }}
+        {{ forecast.bins['magnitude-5'].probability | oafPercent }}
       </ng-template>
 
       chance of one or more aftershocks that are larger than magnitude
@@ -57,7 +56,7 @@
        It is likely that there will be smaller earthquakes over the next
        {{ oaf.advisoryTimeFrame }}, with
 
-      <ng-container 
+      <ng-container
           *ngIf="forecast?.bins['magnitude-3']?.p95maximum > 0; else noRange">
         {{ forecast.bins['magnitude-3'].p95minimum }} to
         {{ forecast.bins['magnitude-3'].p95maximum }}
@@ -106,7 +105,7 @@
             re-invigorated by a larger aftershock.
           </ng-container>
           <ng-template #mag3Prob>
-            {{ bin.probability | sharedOafPercentage }},
+            {{ bin.probability | oafPercent }},
             and it is most likely that as few as
             {{ bin.p95minimum | sharedSignificantFigure:2 }} or as many as
             {{ bin.p95maximum | sharedSignificantFigure:2 }} such
@@ -123,7 +122,7 @@
             re-invigorated by a larger aftershock.
           </ng-container>
           <ng-template #mag3Prob>
-            {{ bin.probability | sharedOafPercentage }}, and it is most likely
+            {{ bin.probability | oafPercent }}, and it is most likely
             that as few as {{ bin.p95minimum | sharedSignificantFigure:2 }}
             or as many as {{ bin.p95maximum | sharedSignificantFigure:2 }}
             such earthquakes may occur.
@@ -138,7 +137,7 @@
             re-invigorated by a larger aftershock.
           </ng-container>
           <ng-template #mag3Prob>
-            {{ bin.probability | sharedOafPercentage }}, and it is most likely
+            {{ bin.probability | oafPercent }}, and it is most likely
             that as few as {{ bin.p95minimum | sharedSignificantFigure:2 }}
             or as many as {{ bin.p95maximum | sharedSignificantFigure:2 }}
             such earthquakes may occur.
@@ -153,7 +152,7 @@
             re-invigorated by a larger aftershock.
           </ng-container>
           <ng-template #mag3Prob>
-            {{ bin.probability | sharedOafPercentage }}, and it is most likely
+            {{ bin.probability | oafPercent }}, and it is most likely
             that as few as {{ bin.p95minimum | sharedSignificantFigure:2 }}
             or as many as {{ bin.p95maximum | sharedSignificantFigure:2 }}
             such earthquakes may occur.
