--- a/src/app/oaf/forecast/forecast.component.html
+++ b/src/app/oaf/forecast/forecast.component.html
@@ -49,7 +49,7 @@
             {{ columnTitles.probability }}
           </mat-header-cell>
           <mat-cell *matCellDef="let bin">
-            {{ bin.probability | oafPercent }} &#37;
+            {{ bin.probability | oafPercent }}
           </mat-cell>
         </ng-container>
       </mat-table>
