--- a/src/app/tell-us/form/form.component.html
+++ b/src/app/tell-us/form/form.component.html
@@ -12,7 +12,7 @@
     <mat-form-field>
       <mat-label>Select Language</mat-label>
       <mat-select
-          (change)="setLanguage($event.value)"
+          (selectionChange)="setLanguage($event.value)"
           [value]="language.id">
         <mat-option *ngFor="let language of languageService.languages"
             [value]="language.id">
