add dyfi zip map

--- a/src/app/dyfi/intensity/intensity.component.html
+++ b/src/app/dyfi/intensity/intensity.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="eventService.product$ | async; let dyfi">
   <ng-container *ngIf="dyfi.contents[dyfi.code + '_ciim_geo.jpg'] as intensity; else noImage">
     <ng-container *ngIf="intensity?.url as url; else noImage">
-      <img src="{{ url }}" alt="DYFI intensity image">
+      <img src="{{ url }}" alt="DYFI intensity map">
     </ng-container>
   </ng-container>
 
