--- a/src/app/dyfi/zip/zip.component.html
+++ b/src/app/dyfi/zip/zip.component.html
@@ -1,3 +1,11 @@
-<p>
-  zip works!
-</p>
+<ng-container *ngIf="eventService.product$ | async; let dyfi">
+  <ng-container *ngIf="dyfi.contents[dyfi.code + '_ciim.jpg'] as intensity; else noImage">
+    <ng-container *ngIf="intensity?.url as url; else noImage">
+      <img src="{{ url }}" alt="DYFI Zip map">
+    </ng-container>
+  </ng-container>
+
+  <ng-template #noImage>
+    <h1>Not available for this event</h1>
+  </ng-template>
+</ng-container>
